2005-09-21  Sven Panne  <sven.panne@aedion.de>

	* src/al_types.h, src/alc/alc_context.c: Synchronized names of
	device structs to reduce #ifdefs in OpenAL headers.

2005-09-18  Sven Panne  <sven.panne@aedion.de>

	* src/arch/interface/interface_sound.c: Silenced warnings about
	stubbed pause/resume functionality. It is not clear if there is
	really something missing, but it was quite annoying.

	* src/al_mixer.c: When the (asynchronous) current context was set
	to NULL, the mixer thread was still in its busy wait(!) loop.
	Consequently other threads might wait forever to get the mixer
	lock and alcMakeContextCurrent might hang. We wait for 1us now in
	each mixer iteration to give other threads a chance to acquire the
	mixer lock. All the multithreading logic seems to be overly
	complicated, so it is not clear if this is really the correct way
	to fix this issue, but at least it seems to work on Linux now.

	* configure.ac: Use AL_BUILD_LIBRARY instead of _OPENAL32LIB.

2005-09-02  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in: alctypes.h and altypes.h are dead, Jim...

2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/include/AL/alext.h
	linux/src/Makefile.in, linux/src/al_source.c,
	linux/src/extensions/al_ext_loki.h, linux/test/Makefile.in:
	Removed ALUT implementation from linux subtree. Note that
	currently the linux/test directory doesn't build without fiddling
	around with compiler/linker flags. But this doesn't really matter,
	as all tests and examples will reside below the "one and only"
	alut directory in the future, anyway.

	* linux/src/alut/alut_imaadpcm.c, linux/src/alut/alut_main.c,
	linux/src/alut/alut_msadpcm.c, linux/src/alut/alut_rawadpcm.c,
	linux/src/alut/alut_wav.c: Removed.

2005-08-22  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/include/AL/alext.h: Merged alexttypes.h
	into alext.h, cleaning up things a little bit and adding a few
	ALAPIENTRY.
